<resources>
    <string name="app_name">Tutor</string>
    <string name="my_image">My Image</string>
    <string name="siddharth_jain">Siddharth Jain</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All Mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="subheading">SubHeading</string>
</resources>
